# TCP_chat_server_on_c-

./: .gitignore  CMakeLists.txt  README.md  install.sh  unninstall.sh
Client-side/: Client-main.cpp  client  client_header.hpp
DataBase/: credentials.json
Server-side/: Server_main.cpp  server  server-header.hpp  server_header_definition.cpp
common/: Config_file.ini  input.hpp
common/Logger/: logger.cpp  logger.hpp
common/config/: Configuration.hpp
common/service/: tcpserver.service
